// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ButtonCircularStyled /> styles should render the correct styles 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  gap: 8px;
  cursor: pointer;
  white-space: nowrap;
  vertical-align: middle;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  outline: none;
  font-size: 0.875rem;
  font-family: Inter,sans-serif;
  font-weight: 600;
  line-height: 1.25rem;
  -webkit-letter-spacing: -0.006rem;
  -moz-letter-spacing: -0.006rem;
  -ms-letter-spacing: -0.006rem;
  letter-spacing: -0.006rem;
  -webkit-transition: background-color 150ms ease-in-out, box-shadow 150ms ease-in-out 0s;
  transition: background-color 150ms ease-in-out, box-shadow 150ms ease-in-out 0s;
  min-height: 40px;
  padding: 8px 16px;
  box-shadow: 0 0 0 0 inset unset;
  border: none;
  border-radius: 6px;
  background-color: #0056E0;
  color: #FFFFFF;
}

.c0 > svg {
  -webkit-transition: 150ms ease-in-out;
  transition: 150ms ease-in-out;
}

.c0::-moz-focus-inner {
  border: none;
}

.c0:hover {
  background-color: #246FE5;
  box-shadow: 0 0 0 0 inset unset;
  color: undefined;
}

.c0:active {
  background-color: #0045B3;
  box-shadow: 0 0 0 0 inset unset;
}

.c0[aria-disabled="true"] {
  background-color: #C2C2C2;
  box-shadow: 0 0 0 0 inset unset;
  color: #858585;
  cursor: not-allowed;
}

.c0:focus-visible {
  box-shadow: 0 0 0 2px inset #0056E0,0 0 0 3px inset #FFFFFF;
}

.c0:focus-visible:hover {
  box-shadow: 0 0 0 2px inset #0056E0,0 0 0 3px inset #FFFFFF;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 50%;
  padding: 0;
}

<button
  class="c0 c1"
>
  text
</button>
`;

exports[`<ButtonCircularStyled /> styles should render typography theme props for each variant: destructive 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  gap: 8px;
  cursor: pointer;
  white-space: nowrap;
  vertical-align: middle;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  outline: none;
  font-size: 0.875rem;
  font-family: Inter,sans-serif;
  font-weight: 600;
  line-height: 1.25rem;
  -webkit-letter-spacing: -0.006rem;
  -moz-letter-spacing: -0.006rem;
  -ms-letter-spacing: -0.006rem;
  letter-spacing: -0.006rem;
  -webkit-transition: background-color 150ms ease-in-out, box-shadow 150ms ease-in-out 0s;
  transition: background-color 150ms ease-in-out, box-shadow 150ms ease-in-out 0s;
  min-height: 40px;
  padding: 8px 16px;
  box-shadow: 0 0 0 0 inset unset;
  border: none;
  border-radius: 6px;
  background-color: #CB2233;
  color: #FFFFFF;
}

.c0 > svg {
  -webkit-transition: 150ms ease-in-out;
  transition: 150ms ease-in-out;
}

.c0::-moz-focus-inner {
  border: none;
}

.c0:hover {
  background-color: #D83848;
  box-shadow: 0 0 0 0 inset unset;
  color: undefined;
}

.c0:active {
  background-color: #A21B29;
  box-shadow: 0 0 0 0 inset unset;
}

.c0[aria-disabled="true"] {
  background-color: #C2C2C2;
  box-shadow: 0 0 0 0 inset unset;
  color: #858585;
  cursor: not-allowed;
}

.c0:focus-visible {
  box-shadow: 0 0 0 2px inset #0056E0,0 0 0 3px inset #FFFFFF;
}

.c0:focus-visible:hover {
  box-shadow: 0 0 0 2px inset #0056E0,0 0 0 3px inset #FFFFFF;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 50%;
  padding: 0;
}

<button
  class="c0 c1"
>
  <div />
</button>
`;

exports[`<ButtonCircularStyled /> styles should render typography theme props for each variant: primary 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  gap: 8px;
  cursor: pointer;
  white-space: nowrap;
  vertical-align: middle;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  outline: none;
  font-size: 0.875rem;
  font-family: Inter,sans-serif;
  font-weight: 600;
  line-height: 1.25rem;
  -webkit-letter-spacing: -0.006rem;
  -moz-letter-spacing: -0.006rem;
  -ms-letter-spacing: -0.006rem;
  letter-spacing: -0.006rem;
  -webkit-transition: background-color 150ms ease-in-out, box-shadow 150ms ease-in-out 0s;
  transition: background-color 150ms ease-in-out, box-shadow 150ms ease-in-out 0s;
  min-height: 40px;
  padding: 8px 16px;
  box-shadow: 0 0 0 0 inset unset;
  border: none;
  border-radius: 6px;
  background-color: #0056E0;
  color: #FFFFFF;
}

.c0 > svg {
  -webkit-transition: 150ms ease-in-out;
  transition: 150ms ease-in-out;
}

.c0::-moz-focus-inner {
  border: none;
}

.c0:hover {
  background-color: #246FE5;
  box-shadow: 0 0 0 0 inset unset;
  color: undefined;
}

.c0:active {
  background-color: #0045B3;
  box-shadow: 0 0 0 0 inset unset;
}

.c0[aria-disabled="true"] {
  background-color: #C2C2C2;
  box-shadow: 0 0 0 0 inset unset;
  color: #858585;
  cursor: not-allowed;
}

.c0:focus-visible {
  box-shadow: 0 0 0 2px inset #0056E0,0 0 0 3px inset #FFFFFF;
}

.c0:focus-visible:hover {
  box-shadow: 0 0 0 2px inset #0056E0,0 0 0 3px inset #FFFFFF;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 50%;
  padding: 0;
}

<button
  class="c0 c1"
>
  <div />
</button>
`;

exports[`<ButtonCircularStyled /> styles should render typography theme props for each variant: secondary 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  gap: 8px;
  cursor: pointer;
  white-space: nowrap;
  vertical-align: middle;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  outline: none;
  font-size: 0.875rem;
  font-family: Inter,sans-serif;
  font-weight: 600;
  line-height: 1.25rem;
  -webkit-letter-spacing: -0.006rem;
  -moz-letter-spacing: -0.006rem;
  -ms-letter-spacing: -0.006rem;
  letter-spacing: -0.006rem;
  -webkit-transition: background-color 150ms ease-in-out, box-shadow 150ms ease-in-out 0s;
  transition: background-color 150ms ease-in-out, box-shadow 150ms ease-in-out 0s;
  min-height: 40px;
  padding: 8px 16px;
  box-shadow: 0 0 0 0 inset unset;
  border: none;
  border-radius: 6px;
  background-color: #525252;
  color: #FFFFFF;
}

.c0 > svg {
  -webkit-transition: 150ms ease-in-out;
  transition: 150ms ease-in-out;
}

.c0::-moz-focus-inner {
  border: none;
}

.c0:hover {
  background-color: #666666;
  box-shadow: 0 0 0 0 inset unset;
  color: undefined;
}

.c0:active {
  background-color: #3D3D3D;
  box-shadow: 0 0 0 0 inset unset;
}

.c0[aria-disabled="true"] {
  background-color: #C2C2C2;
  box-shadow: 0 0 0 0 inset unset;
  color: #858585;
  cursor: not-allowed;
}

.c0:focus-visible {
  box-shadow: 0 0 0 2px inset #0056E0,0 0 0 3px inset #FFFFFF;
}

.c0:focus-visible:hover {
  box-shadow: 0 0 0 2px inset #0056E0,0 0 0 3px inset #FFFFFF;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 50%;
  padding: 0;
}

<button
  class="c0 c1"
>
  <div />
</button>
`;

exports[`<ButtonCircularStyled /> styles should render typography theme props for each variant: success 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  gap: 8px;
  cursor: pointer;
  white-space: nowrap;
  vertical-align: middle;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  outline: none;
  font-size: 0.875rem;
  font-family: Inter,sans-serif;
  font-weight: 600;
  line-height: 1.25rem;
  -webkit-letter-spacing: -0.006rem;
  -moz-letter-spacing: -0.006rem;
  -ms-letter-spacing: -0.006rem;
  letter-spacing: -0.006rem;
  -webkit-transition: background-color 150ms ease-in-out, box-shadow 150ms ease-in-out 0s;
  transition: background-color 150ms ease-in-out, box-shadow 150ms ease-in-out 0s;
  min-height: 40px;
  padding: 8px 16px;
  box-shadow: 0 0 0 0 inset unset;
  border: none;
  border-radius: 6px;
  background-color: #127440;
  color: #FFFFFF;
}

.c0 > svg {
  -webkit-transition: 150ms ease-in-out;
  transition: 150ms ease-in-out;
}

.c0::-moz-focus-inner {
  border: none;
}

.c0:hover {
  background-color: #4BCE88;
  box-shadow: 0 0 0 0 inset unset;
  color: undefined;
}

.c0:active {
  background-color: #189B55;
  box-shadow: 0 0 0 0 inset unset;
}

.c0[aria-disabled="true"] {
  background-color: #C2C2C2;
  box-shadow: 0 0 0 0 inset unset;
  color: #858585;
  cursor: not-allowed;
}

.c0:focus-visible {
  box-shadow: 0 0 0 2px inset #0056E0,0 0 0 3px inset #FFFFFF;
}

.c0:focus-visible:hover {
  box-shadow: 0 0 0 2px inset #0056E0,0 0 0 3px inset #FFFFFF;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 50%;
  padding: 0;
}

<button
  class="c0 c1"
>
  <div />
</button>
`;

exports[`<ButtonCircularStyled /> styles should render typography theme props for each variant: tertiary 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  gap: 8px;
  cursor: pointer;
  white-space: nowrap;
  vertical-align: middle;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  outline: none;
  font-size: 0.875rem;
  font-family: Inter,sans-serif;
  font-weight: 600;
  line-height: 1.25rem;
  -webkit-letter-spacing: -0.006rem;
  -moz-letter-spacing: -0.006rem;
  -ms-letter-spacing: -0.006rem;
  letter-spacing: -0.006rem;
  -webkit-transition: background-color 150ms ease-in-out 0s, border-color 150ms ease-in-out 0s, color 150ms ease-in-out 0s, box-shadow 150ms ease-in-out 0s;
  transition: background-color 150ms ease-in-out 0s, border-color 150ms ease-in-out 0s, color 150ms ease-in-out 0s, box-shadow 150ms ease-in-out 0s;
  min-height: 40px;
  padding: 8px 16px;
  box-shadow: 0 0 0 1px inset #E0E0E0;
  border: none;
  border-radius: 6px;
  background-color: transparent;
  color: #292929;
}

.c0 > svg {
  -webkit-transition: 150ms ease-in-out;
  transition: 150ms ease-in-out;
}

.c0::-moz-focus-inner {
  border: none;
}

.c0:hover {
  background-color: #666666;
  box-shadow: 0 0 0 1px inset #666666;
  color: #FFFFFF;
}

.c0:active {
  background-color: #3D3D3D;
  box-shadow: 0 0 0 1px inset #3D3D3D;
}

.c0[aria-disabled="true"] {
  background-color: #C2C2C2;
  box-shadow: 0 0 0 1px inset #C2C2C2;
  color: #858585;
  cursor: not-allowed;
}

.c0:focus-visible {
  box-shadow: 0 0 0 2px inset #0056E0,0 0 0 3px inset #E0E0E0;
}

.c0:focus-visible:hover {
  box-shadow: 0 0 0 2px inset #0056E0,0 0 0 3px inset #FFFFFF;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 50%;
  padding: 0;
}

<button
  class="c0 c1"
>
  <div />
</button>
`;

exports[`<ButtonCircularStyled /> styles should render typography theme props for each variant: tertiaryReversed 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  gap: 8px;
  cursor: pointer;
  white-space: nowrap;
  vertical-align: middle;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  outline: none;
  font-size: 0.875rem;
  font-family: Inter,sans-serif;
  font-weight: 600;
  line-height: 1.25rem;
  -webkit-letter-spacing: -0.006rem;
  -moz-letter-spacing: -0.006rem;
  -ms-letter-spacing: -0.006rem;
  letter-spacing: -0.006rem;
  -webkit-transition: background-color 150ms ease-in-out 0s, border-color 150ms ease-in-out 0s, color 150ms ease-in-out 0s, box-shadow 150ms ease-in-out 0s;
  transition: background-color 150ms ease-in-out 0s, border-color 150ms ease-in-out 0s, color 150ms ease-in-out 0s, box-shadow 150ms ease-in-out 0s;
  min-height: 40px;
  padding: 8px 16px;
  box-shadow: 0 0 0 1px inset #525252;
  border: none;
  border-radius: 6px;
  background-color: transparent;
  color: #FFFFFF;
}

.c0 > svg {
  -webkit-transition: 150ms ease-in-out;
  transition: 150ms ease-in-out;
}

.c0::-moz-focus-inner {
  border: none;
}

.c0:hover {
  background-color: #F1F1F1;
  box-shadow: 0 0 0 1px inset #F1F1F1;
  color: #292929;
}

.c0:active {
  background-color: #C2C2C2;
  box-shadow: 0 0 0 1px inset #C2C2C2;
}

.c0[aria-disabled="true"] {
  background-color: #C2C2C2;
  box-shadow: 0 0 0 1px inset #C2C2C2;
  color: #666666;
  cursor: not-allowed;
}

.c0:focus-visible {
  box-shadow: 0 0 0 2px inset #0056E0,0 0 0 3px inset #525252;
}

.c0:focus-visible:hover {
  box-shadow: 0 0 0 2px inset #0056E0,0 0 0 3px inset #FFFFFF;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 50%;
  padding: 0;
}

<button
  class="c0 c1"
>
  <div />
</button>
`;

exports[`<ButtonRegularStyled /> styles should render the correct styles 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  gap: 8px;
  cursor: pointer;
  white-space: nowrap;
  vertical-align: middle;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  outline: none;
  font-size: 0.875rem;
  font-family: Inter,sans-serif;
  font-weight: 600;
  line-height: 1.25rem;
  -webkit-letter-spacing: -0.006rem;
  -moz-letter-spacing: -0.006rem;
  -ms-letter-spacing: -0.006rem;
  letter-spacing: -0.006rem;
  -webkit-transition: background-color 150ms ease-in-out, box-shadow 150ms ease-in-out 0s;
  transition: background-color 150ms ease-in-out, box-shadow 150ms ease-in-out 0s;
  min-height: 40px;
  padding: 8px 16px;
  box-shadow: 0 0 0 0 inset unset;
  border: none;
  border-radius: 6px;
  background-color: #0056E0;
  color: #FFFFFF;
}

.c0 > svg {
  -webkit-transition: 150ms ease-in-out;
  transition: 150ms ease-in-out;
}

.c0::-moz-focus-inner {
  border: none;
}

.c0:hover {
  background-color: #246FE5;
  box-shadow: 0 0 0 0 inset unset;
  color: undefined;
}

.c0:active {
  background-color: #0045B3;
  box-shadow: 0 0 0 0 inset unset;
}

.c0[aria-disabled="true"] {
  background-color: #C2C2C2;
  box-shadow: 0 0 0 0 inset unset;
  color: #858585;
  cursor: not-allowed;
}

.c0:focus-visible {
  box-shadow: 0 0 0 2px inset #0056E0,0 0 0 3px inset #FFFFFF;
}

.c0:focus-visible:hover {
  box-shadow: 0 0 0 2px inset #0056E0,0 0 0 3px inset #FFFFFF;
}

<button
  class="c0"
>
  text
</button>
`;

exports[`<ButtonRegularStyled /> styles should render typography theme props for each variant: destructive 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  gap: 8px;
  cursor: pointer;
  white-space: nowrap;
  vertical-align: middle;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  outline: none;
  font-size: 0.875rem;
  font-family: Inter,sans-serif;
  font-weight: 600;
  line-height: 1.25rem;
  -webkit-letter-spacing: -0.006rem;
  -moz-letter-spacing: -0.006rem;
  -ms-letter-spacing: -0.006rem;
  letter-spacing: -0.006rem;
  -webkit-transition: background-color 150ms ease-in-out, box-shadow 150ms ease-in-out 0s;
  transition: background-color 150ms ease-in-out, box-shadow 150ms ease-in-out 0s;
  min-height: 40px;
  padding: 8px 16px;
  box-shadow: 0 0 0 0 inset unset;
  border: none;
  border-radius: 6px;
  background-color: #CB2233;
  color: #FFFFFF;
}

.c0 > svg {
  -webkit-transition: 150ms ease-in-out;
  transition: 150ms ease-in-out;
}

.c0::-moz-focus-inner {
  border: none;
}

.c0:hover {
  background-color: #D83848;
  box-shadow: 0 0 0 0 inset unset;
  color: undefined;
}

.c0:active {
  background-color: #A21B29;
  box-shadow: 0 0 0 0 inset unset;
}

.c0[aria-disabled="true"] {
  background-color: #C2C2C2;
  box-shadow: 0 0 0 0 inset unset;
  color: #858585;
  cursor: not-allowed;
}

.c0:focus-visible {
  box-shadow: 0 0 0 2px inset #0056E0,0 0 0 3px inset #FFFFFF;
}

.c0:focus-visible:hover {
  box-shadow: 0 0 0 2px inset #0056E0,0 0 0 3px inset #FFFFFF;
}

<button
  class="c0"
>
  text
</button>
`;

exports[`<ButtonRegularStyled /> styles should render typography theme props for each variant: primary 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  gap: 8px;
  cursor: pointer;
  white-space: nowrap;
  vertical-align: middle;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  outline: none;
  font-size: 0.875rem;
  font-family: Inter,sans-serif;
  font-weight: 600;
  line-height: 1.25rem;
  -webkit-letter-spacing: -0.006rem;
  -moz-letter-spacing: -0.006rem;
  -ms-letter-spacing: -0.006rem;
  letter-spacing: -0.006rem;
  -webkit-transition: background-color 150ms ease-in-out, box-shadow 150ms ease-in-out 0s;
  transition: background-color 150ms ease-in-out, box-shadow 150ms ease-in-out 0s;
  min-height: 40px;
  padding: 8px 16px;
  box-shadow: 0 0 0 0 inset unset;
  border: none;
  border-radius: 6px;
  background-color: #0056E0;
  color: #FFFFFF;
}

.c0 > svg {
  -webkit-transition: 150ms ease-in-out;
  transition: 150ms ease-in-out;
}

.c0::-moz-focus-inner {
  border: none;
}

.c0:hover {
  background-color: #246FE5;
  box-shadow: 0 0 0 0 inset unset;
  color: undefined;
}

.c0:active {
  background-color: #0045B3;
  box-shadow: 0 0 0 0 inset unset;
}

.c0[aria-disabled="true"] {
  background-color: #C2C2C2;
  box-shadow: 0 0 0 0 inset unset;
  color: #858585;
  cursor: not-allowed;
}

.c0:focus-visible {
  box-shadow: 0 0 0 2px inset #0056E0,0 0 0 3px inset #FFFFFF;
}

.c0:focus-visible:hover {
  box-shadow: 0 0 0 2px inset #0056E0,0 0 0 3px inset #FFFFFF;
}

<button
  class="c0"
>
  text
</button>
`;

exports[`<ButtonRegularStyled /> styles should render typography theme props for each variant: secondary 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  gap: 8px;
  cursor: pointer;
  white-space: nowrap;
  vertical-align: middle;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  outline: none;
  font-size: 0.875rem;
  font-family: Inter,sans-serif;
  font-weight: 600;
  line-height: 1.25rem;
  -webkit-letter-spacing: -0.006rem;
  -moz-letter-spacing: -0.006rem;
  -ms-letter-spacing: -0.006rem;
  letter-spacing: -0.006rem;
  -webkit-transition: background-color 150ms ease-in-out, box-shadow 150ms ease-in-out 0s;
  transition: background-color 150ms ease-in-out, box-shadow 150ms ease-in-out 0s;
  min-height: 40px;
  padding: 8px 16px;
  box-shadow: 0 0 0 0 inset unset;
  border: none;
  border-radius: 6px;
  background-color: #525252;
  color: #FFFFFF;
}

.c0 > svg {
  -webkit-transition: 150ms ease-in-out;
  transition: 150ms ease-in-out;
}

.c0::-moz-focus-inner {
  border: none;
}

.c0:hover {
  background-color: #666666;
  box-shadow: 0 0 0 0 inset unset;
  color: undefined;
}

.c0:active {
  background-color: #3D3D3D;
  box-shadow: 0 0 0 0 inset unset;
}

.c0[aria-disabled="true"] {
  background-color: #C2C2C2;
  box-shadow: 0 0 0 0 inset unset;
  color: #858585;
  cursor: not-allowed;
}

.c0:focus-visible {
  box-shadow: 0 0 0 2px inset #0056E0,0 0 0 3px inset #FFFFFF;
}

.c0:focus-visible:hover {
  box-shadow: 0 0 0 2px inset #0056E0,0 0 0 3px inset #FFFFFF;
}

<button
  class="c0"
>
  text
</button>
`;

exports[`<ButtonRegularStyled /> styles should render typography theme props for each variant: success 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  gap: 8px;
  cursor: pointer;
  white-space: nowrap;
  vertical-align: middle;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  outline: none;
  font-size: 0.875rem;
  font-family: Inter,sans-serif;
  font-weight: 600;
  line-height: 1.25rem;
  -webkit-letter-spacing: -0.006rem;
  -moz-letter-spacing: -0.006rem;
  -ms-letter-spacing: -0.006rem;
  letter-spacing: -0.006rem;
  -webkit-transition: background-color 150ms ease-in-out, box-shadow 150ms ease-in-out 0s;
  transition: background-color 150ms ease-in-out, box-shadow 150ms ease-in-out 0s;
  min-height: 40px;
  padding: 8px 16px;
  box-shadow: 0 0 0 0 inset unset;
  border: none;
  border-radius: 6px;
  background-color: #127440;
  color: #FFFFFF;
}

.c0 > svg {
  -webkit-transition: 150ms ease-in-out;
  transition: 150ms ease-in-out;
}

.c0::-moz-focus-inner {
  border: none;
}

.c0:hover {
  background-color: #4BCE88;
  box-shadow: 0 0 0 0 inset unset;
  color: undefined;
}

.c0:active {
  background-color: #189B55;
  box-shadow: 0 0 0 0 inset unset;
}

.c0[aria-disabled="true"] {
  background-color: #C2C2C2;
  box-shadow: 0 0 0 0 inset unset;
  color: #858585;
  cursor: not-allowed;
}

.c0:focus-visible {
  box-shadow: 0 0 0 2px inset #0056E0,0 0 0 3px inset #FFFFFF;
}

.c0:focus-visible:hover {
  box-shadow: 0 0 0 2px inset #0056E0,0 0 0 3px inset #FFFFFF;
}

<button
  class="c0"
>
  text
</button>
`;

exports[`<ButtonRegularStyled /> styles should render typography theme props for each variant: tertiary 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  gap: 8px;
  cursor: pointer;
  white-space: nowrap;
  vertical-align: middle;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  outline: none;
  font-size: 0.875rem;
  font-family: Inter,sans-serif;
  font-weight: 600;
  line-height: 1.25rem;
  -webkit-letter-spacing: -0.006rem;
  -moz-letter-spacing: -0.006rem;
  -ms-letter-spacing: -0.006rem;
  letter-spacing: -0.006rem;
  -webkit-transition: background-color 150ms ease-in-out 0s, border-color 150ms ease-in-out 0s, color 150ms ease-in-out 0s, box-shadow 150ms ease-in-out 0s;
  transition: background-color 150ms ease-in-out 0s, border-color 150ms ease-in-out 0s, color 150ms ease-in-out 0s, box-shadow 150ms ease-in-out 0s;
  min-height: 40px;
  padding: 8px 16px;
  box-shadow: 0 0 0 1px inset #E0E0E0;
  border: none;
  border-radius: 6px;
  background-color: transparent;
  color: #292929;
}

.c0 > svg {
  -webkit-transition: 150ms ease-in-out;
  transition: 150ms ease-in-out;
}

.c0::-moz-focus-inner {
  border: none;
}

.c0:hover {
  background-color: #666666;
  box-shadow: 0 0 0 1px inset #666666;
  color: #FFFFFF;
}

.c0:active {
  background-color: #3D3D3D;
  box-shadow: 0 0 0 1px inset #3D3D3D;
}

.c0[aria-disabled="true"] {
  background-color: #C2C2C2;
  box-shadow: 0 0 0 1px inset #C2C2C2;
  color: #858585;
  cursor: not-allowed;
}

.c0:focus-visible {
  box-shadow: 0 0 0 2px inset #0056E0,0 0 0 3px inset #E0E0E0;
}

.c0:focus-visible:hover {
  box-shadow: 0 0 0 2px inset #0056E0,0 0 0 3px inset #FFFFFF;
}

<button
  class="c0"
>
  text
</button>
`;

exports[`<ButtonRegularStyled /> styles should render typography theme props for each variant: tertiaryReversed 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  gap: 8px;
  cursor: pointer;
  white-space: nowrap;
  vertical-align: middle;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  outline: none;
  font-size: 0.875rem;
  font-family: Inter,sans-serif;
  font-weight: 600;
  line-height: 1.25rem;
  -webkit-letter-spacing: -0.006rem;
  -moz-letter-spacing: -0.006rem;
  -ms-letter-spacing: -0.006rem;
  letter-spacing: -0.006rem;
  -webkit-transition: background-color 150ms ease-in-out 0s, border-color 150ms ease-in-out 0s, color 150ms ease-in-out 0s, box-shadow 150ms ease-in-out 0s;
  transition: background-color 150ms ease-in-out 0s, border-color 150ms ease-in-out 0s, color 150ms ease-in-out 0s, box-shadow 150ms ease-in-out 0s;
  min-height: 40px;
  padding: 8px 16px;
  box-shadow: 0 0 0 1px inset #525252;
  border: none;
  border-radius: 6px;
  background-color: transparent;
  color: #FFFFFF;
}

.c0 > svg {
  -webkit-transition: 150ms ease-in-out;
  transition: 150ms ease-in-out;
}

.c0::-moz-focus-inner {
  border: none;
}

.c0:hover {
  background-color: #F1F1F1;
  box-shadow: 0 0 0 1px inset #F1F1F1;
  color: #292929;
}

.c0:active {
  background-color: #C2C2C2;
  box-shadow: 0 0 0 1px inset #C2C2C2;
}

.c0[aria-disabled="true"] {
  background-color: #C2C2C2;
  box-shadow: 0 0 0 1px inset #C2C2C2;
  color: #666666;
  cursor: not-allowed;
}

.c0:focus-visible {
  box-shadow: 0 0 0 2px inset #0056E0,0 0 0 3px inset #525252;
}

.c0:focus-visible:hover {
  box-shadow: 0 0 0 2px inset #0056E0,0 0 0 3px inset #FFFFFF;
}

<button
  class="c0"
>
  text
</button>
`;
